doc/test/workshop-smtp_partial-ref.txt
debug core: applying policy ipv4 for raw next dissector
debug core: applying policy tcp for ipv4 next dissector
debug core: applying policy tcp connection for tcp next dissector
debug conn: opening connection 192.168.10.10:56704 -> 192.168.20.1:80
debug core: rejected policy <unnamed>
debug core: applying policy ipv4 for raw next dissector
debug core: applying policy tcp for ipv4 next dissector
debug core: applying policy tcp connection for tcp next dissector
debug core: applying policy ipv4 for raw next dissector
debug core: applying policy tcp for ipv4 next dissector
debug core: applying policy tcp connection for tcp next dissector
debug core: applying policy ipv4 for raw next dissector
debug core: applying policy tcp for ipv4 next dissector
debug core: applying policy tcp connection for tcp next dissector
debug core: applying policy ipv4 for raw next dissector
debug core: applying policy tcp for ipv4 next dissector
debug core: applying policy tcp connection for tcp next dissector
debug core: applying policy ipv4 for raw next dissector
debug core: applying policy tcp for ipv4 next dissector
debug core: applying policy tcp connection for tcp next dissector
debug core: applying policy ipv4 for raw next dissector
debug core: applying policy tcp for ipv4 next dissector
debug core: applying policy tcp connection for tcp next dissector
debug core: applying policy ipv4 for raw next dissector
debug core: applying policy tcp for ipv4 next dissector
debug core: applying policy tcp connection for tcp next dissector
debug core: applying policy ipv4 for raw next dissector
debug core: applying policy tcp for ipv4 next dissector
debug core: applying policy tcp connection for tcp next dissector
debug core: applying policy ipv4 for raw next dissector
debug core: applying policy tcp for ipv4 next dissector
debug core: applying policy tcp connection for tcp next dissector
debug core: applying policy ipv4 for raw next dissector
debug core: applying policy tcp for ipv4 next dissector
debug core: applying policy tcp connection for tcp next dissector
debug conn: opening connection 192.168.10.10:41155 -> 192.168.20.1:25
debug core: applying policy for tcp_connection next dissector
debug core: applying policy ipv4 for raw next dissector
debug core: applying policy tcp for ipv4 next dissector
debug core: applying policy tcp connection for tcp next dissector
debug core: applying policy ipv4 for raw next dissector
debug core: applying policy tcp for ipv4 next dissector
debug core: applying policy tcp connection for tcp next dissector
debug core: applying policy ipv4 for raw next dissector
debug core: applying policy tcp for ipv4 next dissector
debug core: applying policy tcp connection for tcp next dissector
debug grammar: parse error at byte 0 for field <unknown> in <unknown>: incomplete grammar
debug grammar: parse error context: 220 metasploitable.localdomain ESMTP Postfix (Ubuntu)\x0d\x0a...
alert: id = = <>
	severity = high
	description = invalid smtp response parse error at byte 0 for field <unknown> in <unknown>: incomplete grammar
debug conn: dropping connection 192.168.10.10:41155 -> 192.168.20.1:25
debug core: applying policy ipv4 for raw next dissector
debug core: applying policy tcp for ipv4 next dissector
debug core: applying policy tcp connection for tcp next dissector
debug core: applying policy ipv4 for raw next dissector
debug core: rejected policy tcp
debug core: applying policy ipv4 for raw next dissector
debug core: rejected policy tcp
debug core: applying policy ipv4 for raw next dissector
debug core: applying policy tcp for ipv4 next dissector
debug core: applying policy tcp connection for tcp next dissector
debug core: applying policy ipv4 for raw next dissector
debug core: applying policy tcp for ipv4 next dissector
debug core: applying policy tcp connection for tcp next dissector
debug core: applying policy ipv4 for raw next dissector
debug core: applying policy tcp for ipv4 next dissector
debug core: applying policy tcp connection for tcp next dissector
debug core: applying policy ipv4 for raw next dissector
debug core: applying policy tcp for ipv4 next dissector
debug core: applying policy tcp connection for tcp next dissector
debug core: applying policy ipv4 for raw next dissector
debug core: applying policy tcp for ipv4 next dissector
debug core: applying policy tcp connection for tcp next dissector
debug core: applying policy ipv4 for raw next dissector
debug core: applying policy tcp for ipv4 next dissector
debug core: applying policy tcp connection for tcp next dissector
debug core: applying policy ipv4 for raw next dissector
debug core: applying policy tcp for ipv4 next dissector
debug core: applying policy tcp connection for tcp next dissector
debug core: applying policy ipv4 for raw next dissector
debug core: applying policy tcp for ipv4 next dissector
debug core: applying policy tcp connection for tcp next dissector
debug core: applying policy ipv4 for raw next dissector
debug core: applying policy tcp for ipv4 next dissector
debug core: applying policy tcp connection for tcp next dissector
debug core: applying policy ipv4 for raw next dissector
debug core: applying policy tcp for ipv4 next dissector
debug core: applying policy tcp connection for tcp next dissector
debug core: applying policy ipv4 for raw next dissector
debug core: applying policy tcp for ipv4 next dissector
debug core: applying policy tcp connection for tcp next dissector
debug core: applying policy ipv4 for raw next dissector
debug core: applying policy tcp for ipv4 next dissector
debug core: applying policy tcp connection for tcp next dissector
debug core: applying policy ipv4 for raw next dissector
debug core: applying policy tcp for ipv4 next dissector
debug core: applying policy tcp connection for tcp next dissector
debug conn: closing connection 192.168.10.10:56704 -> 192.168.20.1:80
debug core: applying policy ipv4 for raw next dissector
debug core: applying policy tcp for ipv4 next dissector
debug core: applying policy tcp connection for tcp next dissector
debug core: applying policy ipv4 for raw next dissector
debug core: applying policy tcp for ipv4 next dissector
debug core: applying policy tcp connection for tcp next dissector
debug conn: closing connection 192.168.10.10:41155 -> 192.168.20.1:25
debug core: applying policy ipv4 for raw next dissector
debug core: applying policy tcp for ipv4 next dissector
debug core: applying policy tcp connection for tcp next dissector
debug core: applying policy default action for no connection found for tcp packet
alert: id = = <>
	severity = low
	description = no connection found for tcp packet
	sources = {
		address: 192.168.10.10
		service: tcp/41155
	}
	targets = {
		address: 192.168.20.1
		service: tcp/25
	}
debug core: applying policy ipv4 for raw next dissector
debug core: applying policy tcp for ipv4 next dissector
debug core: applying policy tcp connection for tcp next dissector
debug core: applying policy default action for no connection found for tcp packet
alert: id = = <>
	severity = low
	description = no connection found for tcp packet
	sources = {
		address: 192.168.20.1
		service: tcp/25
	}
	targets = {
		address: 192.168.10.10
		service: tcp/41155
	}
debug core: applying policy ipv4 for raw next dissector
debug core: applying policy tcp for ipv4 next dissector
debug core: applying policy tcp connection for tcp next dissector
debug core: applying policy default action for no connection found for tcp packet
alert: id = = <>
	severity = low
	description = no connection found for tcp packet
	sources = {
		address: 192.168.10.10
		service: tcp/41155
	}
	targets = {
		address: 192.168.20.1
		service: tcp/25
	}
debug core: applying policy ipv4 for raw next dissector
debug core: applying policy tcp for ipv4 next dissector
debug core: applying policy tcp connection for tcp next dissector
debug core: applying policy default action for no connection found for tcp packet
alert: id = = <>
	severity = low
	description = no connection found for tcp packet
	sources = {
		address: 192.168.20.1
		service: tcp/25
	}
	targets = {
		address: 192.168.10.10
		service: tcp/41155
	}
debug core: applying policy ipv4 for raw next dissector
debug core: applying policy tcp for ipv4 next dissector
debug core: applying policy tcp connection for tcp next dissector
debug core: applying policy default action for no connection found for tcp packet
alert: id = = <>
	severity = low
	description = no connection found for tcp packet
	sources = {
		address: 192.168.20.1
		service: tcp/25
	}
	targets = {
		address: 192.168.10.10
		service: tcp/41155
	}
debug core: applying policy ipv4 for raw next dissector
debug core: applying policy tcp for ipv4 next dissector
debug core: applying policy tcp connection for tcp next dissector
debug core: applying policy default action for no connection found for tcp packet
alert: id = = <>
	severity = low
	description = no connection found for tcp packet
	sources = {
		address: 192.168.10.10
		service: tcp/41155
	}
	targets = {
		address: 192.168.20.1
		service: tcp/25
	}
debug core: applying policy ipv4 for raw next dissector
debug core: applying policy tcp for ipv4 next dissector
debug core: applying policy tcp connection for tcp next dissector
debug core: applying policy default action for no connection found for tcp packet
alert: id = = <>
	severity = low
	description = no connection found for tcp packet
	sources = {
		address: 192.168.10.10
		service: tcp/41155
	}
	targets = {
		address: 192.168.20.1
		service: tcp/25
	}
debug core: applying policy ipv4 for raw next dissector
debug core: applying policy tcp for ipv4 next dissector
debug core: applying policy tcp connection for tcp next dissector
debug core: applying policy default action for no connection found for tcp packet
alert: id = = <>
	severity = low
	description = no connection found for tcp packet
	sources = {
		address: 192.168.20.1
		service: tcp/25
	}
	targets = {
		address: 192.168.10.10
		service: tcp/41155
	}
debug core: applying policy ipv4 for raw next dissector
debug core: applying policy tcp for ipv4 next dissector
debug core: applying policy tcp connection for tcp next dissector
debug core: applying policy default action for no connection found for tcp packet
alert: id = = <>
	severity = low
	description = no connection found for tcp packet
	sources = {
		address: 192.168.20.1
		service: tcp/25
	}
	targets = {
		address: 192.168.10.10
		service: tcp/41155
	}
debug core: applying policy ipv4 for raw next dissector
debug core: applying policy tcp for ipv4 next dissector
debug core: applying policy tcp connection for tcp next dissector
debug core: applying policy default action for no connection found for tcp packet
alert: id = = <>
	severity = low
	description = no connection found for tcp packet
	sources = {
		address: 192.168.10.10
		service: tcp/41155
	}
	targets = {
		address: 192.168.20.1
		service: tcp/25
	}
debug core: applying policy ipv4 for raw next dissector
debug core: applying policy tcp for ipv4 next dissector
debug core: applying policy tcp connection for tcp next dissector
debug core: applying policy default action for no connection found for tcp packet
alert: id = = <>
	severity = low
	description = no connection found for tcp packet
	sources = {
		address: 192.168.10.10
		service: tcp/41155
	}
	targets = {
		address: 192.168.20.1
		service: tcp/25
	}
debug core: applying policy ipv4 for raw next dissector
debug core: applying policy tcp for ipv4 next dissector
debug core: applying policy tcp connection for tcp next dissector
debug core: applying policy default action for no connection found for tcp packet
alert: id = = <>
	severity = low
	description = no connection found for tcp packet
	sources = {
		address: 192.168.20.1
		service: tcp/25
	}
	targets = {
		address: 192.168.10.10
		service: tcp/41155
	}
debug lua: closing state
